Added buttons/colors and form to html. As well as styling to css

--- a/index.HTML
+++ b/index.HTML
@@ -7,6 +7,28 @@
     <title>Color Button Transformation</title>
 </head>
 <body>
+    <div class = "container-1">
+        <h2>Change the color of the Buttons!</h2>
+        <div class= "flex-box-pick-color">
+            <form action="">
+                <select name="backdrop" id="background" onchange="buttonColorChange(this)">
+                    <option value="random">Random</option>
+                    <option value="red">Red</option>
+                    <option value="green">Green</option>
+                    <option vaule="reset">Reset</option>
+                </select>
+            </form>
+
+            <button class="btn btn-primary">Wee!</button>
+            <button class="btn btn-danger">Yahoo!</button>
+            <button class="btn btn-warning">Google</button>
+            <button class="btn btn-success">FaceBook</button>
+        </div>
+
+
+
+
+    </div>
     
 
     <script src="static/js/script.js"></script> 
